# rm_pico_dev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  canbus.cpp  diagram.puml
demos/: input_and_output.cpp
docs/: CMakeLists.txt  mainpage.md  more_wiki.md  wiki.md
examples/: CMakeLists.txt  add_cmd.cpp  basic_cmd.cpp  basic_shell.cpp  cli_sd_card_demo.cpp  dbus_demo.cpp  hello_world_demo.cpp  motor_demo.cpp  retroterm_demo.cpp  sample_CMakeLists.txt  taproot_remote.cpp  yaml_demo(PLZFIX).cpp
examples/cli/: CMakeLists.txt
examples/cli/add_cmd/: CMakeLists.txt  add_cmd.cpp
examples/cli/basic_cmd/: CMakeLists.txt  basic_cmd.cpp
examples/cli/basic_shell/: CMakeLists.txt  basic_shell.cpp
examples/cli/input_and_output/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt
examples/motor/: CMakeLists.txt  motor_demo.cpp
examples/pico_2_pico_demo/: CMakeLists.txt  pico_receive.cpp
examples/pico_2_pico_demo/recive/: CMakeLists.txt  pico_receive.cpp
examples/pico_2_pico_demo/transmit/: CMakeLists.txt  pico_transmit.cpp
examples/remote/: CMakeLists.txt
examples/remote/dbus/: CMakeLists.txt  dbus_demo.cpp
examples/remote/irq_uart/: CMakeLists.txt  irq_uart.cpp
examples/remote/taproot_remote/: CMakeLists.txt  taproot_remote.cpp
examples/sd_card/: CMakeLists.txt  main.cpp
examples/sd_card/cli_sd_card/: CMakeLists.txt  cli_sd_card_demo.cpp
examples/sd_card/no-OS-FatFS-SD-lib/: CMakeLists.txt  hw_config.c  main.cpp
examples/sd_card/save_load_files/: CMakeLists.txt  yaml_demo(PLZFIX).cpp  yaml_demo.cpp
include/: BNO055.h  Command.h  Debug.h  DjiMotor.h  MPU6050.h  MotorHandler.h  PeriodicTimer.h  RefSerial.h  Remote.h  SDCard.h  Uart.h  board.h  drivers.h  drivers.hpp
lib/: .gitmodules
lib/icecream/: icecream.hpp
lib/no-OS-FatFS-SD-SPI-RPi-Pico/simple_example/: hw_config.c  simple_example.cpp
src/: BNO055.cpp  DjiMotor.cpp  ImuInterface.h  MPU6050.cpp  MotorHandler.cpp  clock.h  drivers.cpp  endianness_wrappers.hpp  timeout.hpp
src/Debug/: CLI.cpp  CLI.h  CliFunctions.cpp  CliFunctions.h  Debug.cpp
src/Debug/SDCard/: File.cpp  File.h  LogFile.h  SDCard.cpp  TextFile.cpp  TextFile.h  Yaml.cpp  Yaml.h  fileInterface.h  hw_config.c
src/Debug/UI_tests/: singleButton.cpp  terminalTest.cpp  widgetTest.cpp
src/algorithms/: crc.cpp  crc.hpp  extended_kalman.cpp  extended_kalman.hpp  math_user_utils.cpp  math_user_utils.hpp  smooth_pid.cpp  smooth_pid.hpp
src/communications/: CanBus.h  DJISerial.cpp  DJISerial.h  RefSerial.cpp  RefSerialData.h  Remote.cpp  Uart.cpp
src/communications/can/: CanBus.h  can.cpp  can.hpp
test/: CMakeLists.txt  testlib.cpp
tests/: CMakeLists.txt
